--- a/to-do/src/styles.scss
+++ b/to-do/src/styles.scss
@@ -25,16 +25,35 @@ button {
   cursor: pointer;
   transition: background 0.1s ease-in-out;
 
-  //&:hover {
-  //  background: var(--primary-300);
-  //}
-  //
-  //&:active {
-  //  background: var(--primary-400);
-  //}
+  background: rgba(30, 30, 30, 0.15);
+
+  min-width: 100px;
+
+  &:hover {
+    background: rgba(30, 30, 30, 0.08);
+  }
+
+  &:active {
+    background: rgba(30, 30, 30, 0.11);
+  }
+
+  &:disabled {
+    background: rgba(30, 30, 30, 0.15);
+    cursor: not-allowed;
+  }
 }
 
 input[type='checkbox'] {
   width: 20px;
   height: 20px;
+}
+
+input[type='text'] {
+  padding: 0.6rem 1.4rem;
+  border: solid 1px rgba(30, 30, 30, 0.4);
+  border-radius: 5px;
+
+  &:hover {
+    border-color: rgba(30, 30, 30, 0.2);
+  }
 }
