--- a/to-do/src/app/to-do-list-item/to-do-list-item.component.scss
+++ b/to-do/src/app/to-do-list-item/to-do-list-item.component.scss
@@ -19,9 +19,19 @@
     span.is-done {
       text-decoration: line-through;
     }
+
+    span[contenteditable='true'] {
+      padding: 0.5rem;
+      border: solid 1px rgba(30, 30, 30, 0.3);
+      background-color: white;
+      border-radius: 5px;
+    }
   }
 
   .actions {
+    display: flex;
+    gap: 0.5rem;
+
     .delete-button {
       color: red;
       background: none;
