--- a/to-do/src/app/to-do-form/to-do-form.component.html
+++ b/to-do/src/app/to-do-form/to-do-form.component.html
@@ -1,8 +1,14 @@
 <form [formGroup]="formGroup" (ngSubmit)="onFormSubmit()">
   <div class="name-input">
-    <label for="name">To-Do name</label>
-    <input type="text" name="name" id="name" placeholder="name" formControlName="name" />
+    <label for="name" i18n>To-Do name</label>
+    <input
+      type="text"
+      name="name"
+      id="name"
+      i18n-placeholder
+      placeholder="name"
+      formControlName="name" />
   </div>
 
-  <button type="submit" [disabled]="formGroup.invalid">Save</button>
+  <button type="submit" [disabled]="formGroup.invalid" i18n>Save</button>
 </form>
