--- a/to-do/src/app/add-to-do-item/add-to-do-item.component.html
+++ b/to-do/src/app/add-to-do-item/add-to-do-item.component.html
@@ -1,3 +1,3 @@
-<h1>Add To-Do item</h1>
-<button routerLink="/items">⬅ Back to Home</button>
+<h1 i18n>Add To-Do item</h1>
+<button routerLink="/items" i18n>⬅ Back to Home</button>
 <app-to-do-form (formSubmitted)="onFormSubmit($event)"></app-to-do-form>
