--- a/to-do/src/app/to-do-list-item/to-do-list-item.component.html
+++ b/to-do/src/app/to-do-list-item/to-do-list-item.component.html
@@ -13,7 +13,7 @@
 <div class="actions">
   <button class="small" [disabled]="isFirst" (click)="onMoveItemClick($event, true)">⬆</button>
   <button class="small" [disabled]="isLast" (click)="onMoveItemClick($event, false)">⬇</button>
-  <button *ngIf="!isInEditMode" class="edit-button" (click)="onEditClick($event)">Edit</button>
-  <button *ngIf="isInEditMode" class="edit-button" (click)="onSaveClick($event)">Save</button>
-  <button class="delete-button" (click)="onDeleteClick($event)">Delete</button>
+  <button *ngIf="!isInEditMode" class="edit-button" (click)="onEditClick($event)" i18n>Edit</button>
+  <button *ngIf="isInEditMode" class="edit-button" (click)="onSaveClick($event)" i18n>Save</button>
+  <button class="delete-button" (click)="onDeleteClick($event)" i18n>Delete</button>
 </div>
