--- a/to-do/src/app/to-do-list-item/to-do-list-item.component.scss
+++ b/to-do/src/app/to-do-list-item/to-do-list-item.component.scss
@@ -1,15 +1,16 @@
 :host {
   --height: 40px;
 
-  border: solid 1px rgba(30, 30, 30, 0.4);
+  border: solid 1px var(--border-color);
   padding: 1rem;
   border-radius: 5px;
   cursor: pointer;
   display: flex;
   gap: 0.5rem;
   transition: background 0.1s ease-in-out;
-  background-color: white;
+  background-color: var(--background-primary);
   height: var(--height);
+  color: var(--neutral);
 
   &.animation-up {
     position: relative;
@@ -60,11 +61,11 @@
       background: none;
 
       &:hover {
-        background-color: rgba(30, 30, 30, 0.1);
+        background-color: var(--primary-hover);
       }
 
       &:active {
-        background-color: rgba(30, 30, 30, 0.2);
+        background-color: var(--primary-active);
       }
     }
   }
