store preferences in localstorage

--- a/to-do/src/app/shared/header/header.component.html
+++ b/to-do/src/app/shared/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="left">
   <div class="title-wrapper">
     <h1>✔️ {{ (title$ | async) ?? '' | translate }}</h1>
-    <p>{{ 'HEADER.SUBTITLE' | translate }}</p>
+    <p>📝 {{ 'HEADER.SUBTITLE' | translate }}</p>
   </div>
 </div>
 <div class="right">
