--- a/to-do/src/app/to-do-list-item/to-do-list-item.component.scss
+++ b/to-do/src/app/to-do-list-item/to-do-list-item.component.scss
@@ -61,11 +61,11 @@
       background: none;
 
       &:hover {
-        background-color: var(--primary-hover);
+        background-color: rgba(red, 0.15);
       }
 
       &:active {
-        background-color: var(--primary-active);
+        background-color: rgba(red, 0.1);
       }
     }
   }
