--- a/to-do/src/app/to-do-list/to-do-list.component.html
+++ b/to-do/src/app/to-do-list/to-do-list.component.html
@@ -10,7 +10,7 @@
         (toDoItemDeleted)="onItemDeleted()"></app-to-do-list-item>
     </ng-container>
 
-    <button routerLink="/items/new">➕ {{ 'TODO_LIST.ADD' | translate }}</button>
+    <button routerLink="/items/new" class="add-button">➕ {{ 'TODO_LIST.ADD' | translate }}</button>
   </ng-container>
 </ng-container>
 
