--- a/to-do/src/app/to-do-list/to-do-list.component.scss
+++ b/to-do/src/app/to-do-list/to-do-list.component.scss
@@ -8,3 +8,14 @@
 button {
   align-self: flex-start;
 }
+
+@media screen and (max-width: 768px) {
+  :host {
+    gap: 0;
+    padding: 0;
+  }
+
+  .add-button {
+    margin: 2rem 1rem;
+  }
+}
