--- a/to-do/src/app/shared/dropdown-button/dropdown-button.component.html
+++ b/to-do/src/app/shared/dropdown-button/dropdown-button.component.html
@@ -1,14 +1,19 @@
-<button (click)="toggleDropdown()" [ngClass]="classNames">
+<button
+  mat-icon-button
+  [matMenuTriggerFor]="menu"
+  (click)="toggleDropdown()"
+  [ngClass]="classNames"
+  aria-label="">
   <ng-content></ng-content>
 </button>
-<div *ngIf="showDropdown" #dropdown class="dropdown-content">
+<mat-menu #menu="matMenu" [classList]="'dropdown-content'" class="dropdown-content">
   <ng-container *ngFor="let item of items">
-    <div
+    <button
       *ngIf="(item.disabled$ | async) === false || !item.disabled$"
-      class="dropdown-item"
+      mat-menu-item
       (click)="item.callback($event)">
-      <span *ngIf="item.icon" class="icon">{{ item.icon }}</span>
+      <mat-icon *ngIf="item.icon" class="icon">{{ item.icon }}</mat-icon>
       <span>{{ item.value$ ? (item.value$ | async) : item.value ? item.value : '' }}</span>
-    </div>
+    </button>
   </ng-container>
-</div>
+</mat-menu>
